FIX: visible gallery 2

--- a/wp-content/themes/hello-elementor/includes/elementor/widgets/HelloPropertyGallery/assets/css/gallery-base-main.css
+++ b/wp-content/themes/hello-elementor/includes/elementor/widgets/HelloPropertyGallery/assets/css/gallery-base-main.css
@@ -165,6 +165,14 @@ ol {
     transform: translate(50%, -50%);
 }
 
+.hl-gallery-2 .hl-gallery__list {
+    visibility: hidden;
+}
+
+.hl-gallery_show .hl-gallery__list {
+    visibility: visible;
+}
+
 .hl-gallery-1 .hl-gallery__slider-nav,
 .hl-gallery-3 .hl-gallery__slider-nav {
     position: absolute;
